protobufでシリアライズする

--- a/webapp/go/Makefile
+++ b/webapp/go/Makefile
@@ -4,3 +4,6 @@ all: isucari
 
 isucari: *.go
 	go build -o isucari
+
+protogen: *.proto
+	protoc --gogofaster_out=Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types:. $^
